...
        android:id="@+id/tvUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/login_margin_end"
        android:layout_marginRight="@dimen/login_margin_end"
        android:text="@string/username"
        app:layout_constraintBaseline_toBaselineOf="@+id/etUsername"
        app:layout_constraintEnd_toStartOf="@+id/etUsername" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="@dimen/username_width"
        android:layout_height="wrap_content"
...
        app:layout_constraintEnd_toEndOf="@+id/etUsername"
        app:layout_constraintStart_toStartOf="@+id/etUsername"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_btn_margin_top"
        android:background="@color/colorPrimary"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
...
